--- a/webapp/package.json
+++ b/webapp/package.json
@@ -21,6 +21,8 @@
     "run-sequence": "~1.2.2",
     "gulp-autoprefixer": "~3.1.1",
     "gulp-concat": "~2.6.0",
-    "gulp-uglify": "~2.0.0"
+    "gulp-uglify": "~2.0.0",
+    "gulp-sass": "~2.3.2",
+    "es6-promise": "~3.2.1"
   }
 }
