* Move css and js in S3

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "~2.6.0",
     "gulp-uglify": "~2.0.0",
     "gulp-sass": "~2.3.2",
-    "es6-promise": "~3.2.1"
+    "es6-promise": "~3.2.1",
+    "gulp-s3-deploy": "~1.0.1"
   }
 }
